--- a/index.html
+++ b/index.html
@@ -1,123 +1,219 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Olimpiadas de Programación – Facultad de Ingeniería en Informática</title>
-  <!-- Bootstrap & FontAwesome -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <!-- Lottie Player -->
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <!-- Chart.js & PapaParse -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-  <style>
-    :root {
-      --primary: #0d6efd;
-      --accent: #ffcc00;
-      --dark: #0f172a;
-      --light: #f8fafc;
-    }
-    body {
-      font-family: 'Inter', sans-serif;
-      background: var(--light);
-      color: var(--dark);
-      scroll-behavior: smooth;
-    }
-    .hero {
-      background: linear-gradient(135deg, var(--primary) 0%, #6610f2 100%);
-      color: #fff;
-      padding: 7rem 2rem 6rem;
-      text-align: center;
-    }
-    .hero h1 {font-size: 3.25rem;font-weight: 800;line-height: 1.1;}
-    .hero p {font-size: 1.35rem;margin-bottom: 2.5rem;}
-    .section-title {font-size: 2.25rem;font-weight: 800;margin-bottom: 1.75rem;position: relative;}
-    .section-title::after {content: '';width: 90px;height: 4px;background: var(--accent);position: absolute;left: 0;bottom: -12px;}
-    .benefit-card {transition: transform .3s ease;}
-    .benefit-card:hover {transform: translateY(-8px);}
-    .quote {font-style: italic;}
-    .call-to-action {background: var(--primary);color: #fff;padding: 4rem 2rem;}
-    .call-to-action a {font-weight: 700;}
-    footer {background: #111827;color: #94a3b8;padding: 2rem 0;text-align: center;}
-  </style>
-</head>
-<body>
-<!-- Hero -->
-<section class="hero">
-  <div class="container">
-    <h1>«Competir para innovar, innovar para liderar»</h1>
-    <p class="lead">Las Olimpiadas de Programación transformarán nuestra pasión en reputación&nbsp;— <strong>Decano&nbsp;Mauricio Arbeláez</strong></p>
-    <a href="#por-que" class="btn btn-warning btn-lg">Conoce la propuesta</a>
-  </div>
-</section>
-<!-- Por qué -->
-<section id="por-que" class="py-5">
-  <div class="container">
-    <h2 class="section-title">Un catalizador de excelencia académica</h2>
-    <p>Las Olimpiadas de Programación convierten la teoría en <strong>ejecución impecable</strong>. Durante dos intensas jornadas, nuestros estudiantes resolverán problemas inspirados en la industria&nbsp;4.0, demostrarán resiliencia intelectual y cultivarán una mentalidad de <em>alto rendimiento</em>. Como usted lo afirma, Decano: <span class="quote">“La innovación auténtica nace donde la curiosidad se encuentra con el desafío.”</span></p>
-  </div>
-</section>
-<!-- Beneficios -->
-<section id="beneficios" class="py-5 bg-light">
-  <div class="container">
-    <h2 class="section-title">Valor estratégico para la Facultad</h2>
-    <div class="row g-4">
-      <div class="col-md-6 col-lg-4">
-        <div class="card benefit-card h-100 shadow-sm border-0">
-          <div class="card-body text-center">
-            <i class="fa-solid fa-trophy fa-3x text-warning mb-3"></i>
-            <h5 class="card-title">Reputación de clase mundial</h5>
-            <p>Impulsa a la Facultad a los primeros lugares de los rankings y atrae alianzas internacionales.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Olimpiadas de Programación – Facultad de Ingeniería en Informática
+    </title>
+    <!-- Bootstrap & FontAwesome -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Lottie Player -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- Chart.js & PapaParse -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+    <style>
+      :root {
+        --primary: #0d6efd;
+        --accent: #ffcc00;
+        --dark: #0f172a;
+        --light: #f8fafc;
+      }
+      body {
+        font-family: "Inter", sans-serif;
+        background: var(--light);
+        color: var(--dark);
+        scroll-behavior: smooth;
+      }
+      .hero {
+        background: linear-gradient(135deg, var(--primary) 0%, #6610f2 100%);
+        color: #fff;
+        padding: 7rem 2rem 6rem;
+        text-align: center;
+      }
+      .hero h1 {
+        font-size: 3.25rem;
+        font-weight: 800;
+        line-height: 1.1;
+      }
+      .hero p {
+        font-size: 1.35rem;
+        margin-bottom: 2.5rem;
+      }
+      .section-title {
+        font-size: 2.25rem;
+        font-weight: 800;
+        margin-bottom: 1.75rem;
+        position: relative;
+      }
+      .section-title::after {
+        content: "";
+        width: 90px;
+        height: 4px;
+        background: var(--accent);
+        position: absolute;
+        left: 0;
+        bottom: -12px;
+      }
+      .benefit-card {
+        transition: transform 0.3s ease;
+      }
+      .benefit-card:hover {
+        transform: translateY(-8px);
+      }
+      .quote {
+        font-style: italic;
+      }
+      .call-to-action {
+        background: var(--primary);
+        color: #fff;
+        padding: 4rem 2rem;
+      }
+      .call-to-action a {
+        font-weight: 700;
+      }
+      footer {
+        background: #111827;
+        color: #94a3b8;
+        padding: 2rem 0;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <h1>«Competir para innovar, innovar para liderar»</h1>
+        <p class="lead">
+          Las Olimpiadas de Programación transformarán nuestra pasión en
+          reputación&nbsp;— <strong>Decano&nbsp;Mauricio Arbeláez</strong>
+        </p>
+        <a href="#por-que" class="btn btn-warning btn-lg"
+          >Conoce la propuesta</a
+        >
+      </div>
+    </section>
+    <!-- Por qué -->
+    <section id="por-que" class="py-5">
+      <div class="container">
+        <h2 class="section-title">Un catalizador de excelencia académica</h2>
+        <p>
+          Las Olimpiadas de Programación convierten la teoría en
+          <strong>ejecución impecable</strong>. Durante una intensa jornada,
+          nuestros estudiantes resolverán problemas de programación
+          de forma competitiva, demostrarán resiliencia intelectual y cultivarán
+          una mentalidad de <em>alto rendimiento</em>.
+          <span class="quote"
+            >“La innovación auténtica nace donde la curiosidad se encuentra con
+            el desafío.”</span
+          >
+        </p>
+      </div>
+    </section>
+    <!-- Beneficios -->
+    <section id="beneficios" class="py-5 bg-light">
+      <div class="container">
+        <h2 class="section-title">Valor estratégico para la Facultad</h2>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <div class="card benefit-card h-100 shadow-sm border-0">
+              <div class="card-body text-center">
+                <i class="fa-solid fa-trophy fa-3x text-warning mb-3"></i>
+                <h5 class="card-title">Reputación de clase mundial</h5>
+                <p>
+                  Impulsa a la Facultad a los primeros lugares de los rankings y
+                  atrae alianzas internacionales.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card benefit-card h-100 shadow-sm border-0">
+              <div class="card-body text-center">
+                <i class="fa-solid fa-code fa-3x text-warning mb-3"></i>
+                <h5 class="card-title">Ingenio de alto rendimiento</h5>
+                <p>
+                  Potencia la agilidad mental y la resolución creativa de
+                  problemas bajo presión.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card benefit-card h-100 shadow-sm border-0">
+              <div class="card-body text-center">
+                <i class="fa-solid fa-people-group fa-3x text-warning mb-3"></i>
+                <h5 class="card-title">Comunidad vibrante</h5>
+                <p>
+                  Refuerza la colaboración entre programas, semestres y
+                  egresados, generando sentido de pertenencia.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
-        <div class="card benefit-card h-100 shadow-sm border-0">
-          <div class="card-body text-center">
-            <i class="fa-solid fa-code fa-3x text-warning mb-3"></i>
-            <h5 class="card-title">Ingenio de alto rendimiento</h5>
-            <p>Potencia la agilidad mental y la resolución creativa de problemas bajo presión.</p>
+    </section>
+    <!-- Visión -->
+    <section id="vision" class="py-5">
+      <div class="container">
+        <h2 class="section-title">Sintonía con la visión del Decano</h2>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <p class="quote">
+              “La innovación no se decreta: se vive en cada aula y se celebra en
+              cada logro.”
+            </p>
+            <p>
+              Estas Olimpiadas materializan esa máxima al convertir nuestros
+              salones en <strong>laboratorios de soluciones</strong>. Cada
+              problema es una oportunidad para mostrar la destreza que distingue
+              a nuestra comunidad.
+            </p>
+            <ul>
+              <li>
+                Fortalece los ejes de <strong>investigación aplicada</strong> y
+                transferencia de conocimiento.
+              </li>
+              <li>
+                Conecta la academia con el sector productivo regional y
+                nacional.
+              </li>
+              <li>
+                Exhibe resultados medibles que respaldan la acreditación de alta
+                calidad.
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6 text-center">
+            <lottie-player
+              src="https://assets5.lottiefiles.com/packages/lf20_jcikwtux.json"
+              background="transparent"
+              speed="1"
+              style="width: 100%; height: 320px"
+              loop
+              autoplay
+            ></lottie-player>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
-        <div class="card benefit-card h-100 shadow-sm border-0">
-          <div class="card-body text-center">
-            <i class="fa-solid fa-people-group fa-3x text-warning mb-3"></i>
-            <h5 class="card-title">Comunidad vibrante</h5>
-            <p>Refuerza la colaboración entre programas, semestres y egresados, generando sentido de pertenencia.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Visión -->
-<section id="vision" class="py-5">
-  <div class="container">
-    <h2 class="section-title">Sintonía con la visión del Decano</h2>
-    <div class="row align-items-center">
-      <div class="col-lg-6">
-        <p class="quote">“La innovación no se decreta: se vive en cada aula y se celebra en cada logro.”</p>
-        <p>Estas Olimpiadas materializan esa máxima al convertir nuestros salones en <strong>laboratorios de soluciones</strong>. Cada problema es una oportunidad para mostrar la destreza que distingue a nuestra comunidad.</p>
-        <ul>
-          <li>Fortalece los ejes de <strong>investigación aplicada</strong> y transferencia de conocimiento.</li>
-          <li>Conecta la academia con el sector productivo regional y nacional.</li>
-          <li>Exhibe resultados medibles que respaldan la acreditación de alta calidad.</li>
-        </ul>
-      </div>
-      <div class="col-lg-6 text-center">
-        <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_jcikwtux.json" background="transparent" speed="1" style="width: 100%; height: 320px;" loop autoplay></lottie-player>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Encuesta -->
-<!-- <section id="encuesta" class="py-5 bg-light">
+    </section>
+    <!-- Encuesta -->
+    <!-- <section id="encuesta" class="py-5 bg-light">
   <div class="container">
     <h2 class="section-title">Lo que piensan nuestros estudiantes</h2>
     <p>Resultados preliminares de la encuesta de interés en las Olimpiadas de Programación.</p>
@@ -128,70 +224,80 @@
     </div>
   </div>
 </section> -->
-<!-- CTA -->
-<section class="call-to-action text-center">
-  <div class="container">
-    <h2>Avancemos hacia el futuro</h2>
-    <p class="mb-4">Su aprobación convertirá esta idea en un hito que posicionará a la Facultad a la vanguardia de la educación tecnológica.</p>
-    <!-- <a href="mailto:decanatura@ucaldas.edu.co?subject=Respaldo%20a%20las%20Olimpiadas%20de%20Programación" class="btn btn-light btn-lg">Sí, apoyemos este proyecto</a> -->
-     <a href="tablero.html" class="btn btn-warning btn-lg">Lo que piensan nuestros estudiantes</a>
-  </div>
-</section>
-<!-- Footer -->
-<footer>
-  <div class="container">
-    <p class="mb-0">© 2025 Facultad de Ingeniería en Informática – Universidad de Caldas</p>
-  </div>
-</footer>
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-// ===== SETTINGS =====
-const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRZhk6Di-kQkhYISe2MkFtFmURo2U1FntQGtQRHUAa-0LPaYyM01QkU0YTa9X_rQqCR_qa3hLDSR7iu/pub?gid=2042279636&single=true&output=csv';
-const COLUMNA_INTERES = '¿Tienes conocimientos previos en programación?'; // Ajusta al nombre exacto
-const PROXY = 'https://api.allorigins.win/raw?url='; // Proxy gratuito con CORS
+    <!-- CTA -->
+    <section class="call-to-action text-center">
+      <div class="container">
+        <h2>Avancemos hacia el futuro</h2>
+        <p class="mb-4">
+          Su aprobación convertirá esta idea en un hito que posicionará a la
+          Facultad a la vanguardia de la educación tecnológica.
+        </p>
+        <!-- <a href="mailto:decanatura@ucaldas.edu.co?subject=Respaldo%20a%20las%20Olimpiadas%20de%20Programación" class="btn btn-light btn-lg">Sí, apoyemos este proyecto</a> -->
+        <a href="tablero.html" class="btn btn-warning btn-lg"
+          >Lo que piensan nuestros estudiantes</a
+        >
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <p class="mb-0">
+          © 2025 Facultad de Inteligencia Artificial e Ingenierías – Universidad de Caldas
+        </p>
+      </div>
+    </footer>
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // ===== SETTINGS =====
+      const CSV_URL =
+        "https://docs.google.com/spreadsheets/d/e/2PACX-1vRZhk6Di-kQkhYISe2MkFtFmURo2U1FntQGtQRHUAa-0LPaYyM01QkU0YTa9X_rQqCR_qa3hLDSR7iu/pub?gid=2042279636&single=true&output=csv";
+      const COLUMNA_INTERES = "¿Tienes conocimientos previos en programación?"; // Ajusta al nombre exacto
+      const PROXY = "https://api.allorigins.win/raw?url="; // Proxy gratuito con CORS
 
-// ---------- Fetch CSV vía proxy para evitar CORS ----------
-fetch(PROXY + encodeURIComponent(CSV_URL))
-  .then(res => {
-    if (!res.ok) throw new Error('Network response was not ok');
-    return res.text();
-  })
-  .then(csvText => {
-    const resultados = Papa.parse(csvText, { header: true });
-    construirGraficoInteres(resultados.data);
-  })
-  .catch(err => console.error('Error al cargar CSV:', err));
+      // ---------- Fetch CSV vía proxy para evitar CORS ----------
+      fetch(PROXY + encodeURIComponent(CSV_URL))
+        .then((res) => {
+          if (!res.ok) throw new Error("Network response was not ok");
+          return res.text();
+        })
+        .then((csvText) => {
+          const resultados = Papa.parse(csvText, { header: true });
+          construirGraficoInteres(resultados.data);
+        })
+        .catch((err) => console.error("Error al cargar CSV:", err));
 
-function construirGraficoInteres(rows) {
-  const conteo = {};
-  rows.forEach(r => {
-    const ans = (r[COLUMNA_INTERES] || 'Sin respuesta').trim();
-    conteo[ans] = (conteo[ans] || 0) + 1;
-  });
-  const ctx = document.getElementById('chartInteres').getContext('2d');
-  new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: Object.keys(conteo),
-      datasets: [{
-        label: 'Cantidad de estudiantes',
-        data: Object.values(conteo),
-        borderWidth: 1
-      }]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { display: false },
-        title: { display: false }
-      },
-      scales: {
-        y: { beginAtZero: true }
+      function construirGraficoInteres(rows) {
+        const conteo = {};
+        rows.forEach((r) => {
+          const ans = (r[COLUMNA_INTERES] || "Sin respuesta").trim();
+          conteo[ans] = (conteo[ans] || 0) + 1;
+        });
+        const ctx = document.getElementById("chartInteres").getContext("2d");
+        new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels: Object.keys(conteo),
+            datasets: [
+              {
+                label: "Cantidad de estudiantes",
+                data: Object.values(conteo),
+                borderWidth: 1,
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            plugins: {
+              legend: { display: false },
+              title: { display: false },
+            },
+            scales: {
+              y: { beginAtZero: true },
+            },
+          },
+        });
       }
-    }
-  });
-}
-</script>
-</body>
+    </script>
+  </body>
 </html>
