--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- Visión -->
     <section id="vision" class="py-5">
       <div class="container">
-        <h2 class="section-title">Sintonía con la visión del Decano</h2>
+        <h2 class="section-title">Sintonía con la visión de la Universidad</h2>
         <div class="row align-items-center">
           <div class="col-lg-6">
             <p class="quote">
