--- a/tablero.html
+++ b/tablero.html
@@ -82,8 +82,7 @@
           Tablero Analítico – Olimpiadas de Programación
         </h1>
         <p class="lead">
-          Interactúa con los gráficos para filtrar la información como en
-          Power BI.
+          Interactúa con los gráficos para filtrar la información.
         </p>
         <span id="clearBtn">Quitar filtros</span>
       </div>
