--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <strong>ejecución impecable</strong>. Durante una intensa jornada,
           nuestros estudiantes resolverán problemas de programación
           de forma competitiva, demostrarán resiliencia intelectual y cultivarán
-          una mentalidad de <em>alto rendimiento</em>.
+          una mentalidad de <strong><em>alto rendimiento</em></strong>.
           <span class="quote"
             >“La innovación auténtica nace donde la curiosidad se encuentra con
             el desafío.”</span
