--- a/tablero.html
+++ b/tablero.html
@@ -78,13 +78,16 @@
       "
     >
       <div class="container">
+        <a href="index.html" style="text-decoration: none; color:white" rel="noopener noreferrer">
         <h1 class="display-4 fw-bold">
+
           Tablero Analítico – Olimpiadas de Programación
         </h1>
         <p class="lead">
           Interactúa con los gráficos para filtrar la información.
         </p>
         <span id="clearBtn">Quitar filtros</span>
+      </a>
       </div>
     </section>
 
