--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
           Facultad a la vanguardia de la educación tecnológica.
         </p>
         <!-- <a href="mailto:decanatura@ucaldas.edu.co?subject=Respaldo%20a%20las%20Olimpiadas%20de%20Programación" class="btn btn-light btn-lg">Sí, apoyemos este proyecto</a> -->
-        <a href="tablero.html" class="btn btn-warning btn-lg me-3"
+        <a href="tablero.html" class="btn btn-warning btn-lg me-3 mb-3"
           >Lo que piensan nuestros estudiantes</a
         >
-        <a href="documentos.html" class="btn btn-warning btn-lg"
+        <a href="documentos.html" class="btn btn-warning btn-lg mb-3"
           >Documentos</a
         >
       </div>
