--- a/documentos.html
+++ b/documentos.html
@@ -140,7 +140,7 @@
 
   <!-- Footer -->
   <footer class="py-4 text-center" style="background: var(--dark); color:#94a3b8;">
-    <p class="mb-0">© 2025 Facultad de Ingeniería en Informática – Universidad de Caldas</p>
+    <p class="mb-0">© 2025 Facultad de Inteligencia Artificial e Ingenierías – Universidad de Caldas</p>
   </footer>
 
   <!-- Bootstrap JS -->
